# crystal

./: .gitignore  README.md  index.html  pyproject.toml
docs/: cli.md  inference.md  installation.md  metrics.md  publishing.md  quickstart.md  rewards.md
examples/: evaluate_predictions.py  rl_rewards.py
inference/: crystal_inference.py  requirements.txt
src/crystal_metrics/: README.md  __init__.py  accuracy.py  cli.py  judge.py  reasoning.py  rewards.py  similarity.py
static/css/: style.css
static/js/: main.js
tests/: conftest.py  test_accuracy.py  test_inference.py  test_parity.py  test_reasoning.py  test_rewards.py  test_rewards_parity.py  test_training_adapter.py
training/: README.md  requirements.txt  rewards_grpo.py
training/configs/: zero3_internvl.json
training/docs/: GRPO_TRAINING_RECOMMENDATIONS.md  MULTI_MODEL_SETUP.md  VQA_TRAINING.md
training/open_r1/: NOTICE  grpo_rec.py  internvl_monkey_patch.py  qwen2_5vl_monkey_patch.py
training/open_r1/trainer/: grpo_trainer.py
training/open_r1/utils/: __init__.py  pcgrad.py
training/open_r1/vlm_modules/: internvl_module.py  qwen_module.py
training/scripts/: train_answer_only.sh  train_cpr.sh  train_cpr_internvl.sh  train_semantic.sh
training/vlm_modules/: __init__.py  glm_module.py  internvl_module.py  qwen_module.py
